--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+ColorCube/Assets/Player models/Lightweight RP/TutorialInfo/Scripts.meta
+ColorCube/Assets/Player models/Lightweight RP/TutorialInfo.meta
+ColorCube/Assets/Player models/Lightweight RP/Presets.meta
+ColorCube/Assets/Player models/Lightweight RP/ExampleAssets/Textures/Props.meta
+ColorCube/Assets/Player models/Lightweight RP/ExampleAssets/Textures.meta
+ColorCube/Assets/Player models/Lightweight RP/ExampleAssets.meta
