--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ ColorCube/Assets/Player models/Lightweight RP/Presets.meta
 ColorCube/Assets/Player models/Lightweight RP/ExampleAssets/Textures/Props.meta
 ColorCube/Assets/Player models/Lightweight RP/ExampleAssets/Textures.meta
 ColorCube/Assets/Player models/Lightweight RP/ExampleAssets.meta
+ColorCube/Assets/Player Models/Parent integrated prefabs/test.meta
